--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,8 @@
 			<nav>
 	    		<ul>
 	        		<li><a href="/">home</a></li>
-		        	<li><a href="/research">research</a></li>
-	        		<li><a href="/cv">CV</a></li>
+		        	<li><a href="/research.html">research</a></li>
+	        		<li><a href="/cv.html">CV</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
